@@ -14,6 +14,7 @@
             show_error: true
             alarm_email: {
                 recipients:   "peng.gao@funplusgame.com,zhengkai@gmail.com,yan.zhang@funplusgame.com"
+                suppress_hours: [23, 0, 1, 2, 3, 4, 5, 6, 7,]
                 severity_pool_size: 80
                 severity_threshold: 6
                 interval:   300
