@@ -18,6 +18,7 @@ Release Notes - dpipe - Version v0.5.0.rc
     . report msg/s bytes/s
     . ES index patterns add support for ym/ymw/ymd
     . send alarm according to severity instead of accumulated lines num with priority queue
+    . accumulate alarm email at night
 
 ** Bug
 
